# lk-docs

./: LICENSE  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: build-docs-release.yml  build-docs.yml
docs/: contributing.md  index.md  release-notes.md  roadmap.md
docs/features/: admin-panel.md  bookmarks.md  captcha.md  character-images.md  characters.md  claims.md  config-files.md  currencies.md  design-updates.md  file-manager.md  galleries.md  invitation-keys.md  items.md  loot-tables.md  masterlist.md  myo-slots.md  news.md  notifications.md  prompts.md  raffles.md  randomness.md  rarities.md  reports.md  sales.md  shops.md  site-images.md  site-pages.md  site-settings.md  species.md  trades.md  traits.md  user-accounts.md  user-ranks.md
docs/guides/: configuring.md  creating-item-types.md  dev-intro.md  getting-hired.md  hiring-devs.md  setup-index.md  setup.md  update.md  upgrade.md  working-with-multiple-devs.md
docs/version-history/: v0.0.md  v1.0.md  v1.1.md  v1.2.md  v1.3.md  v1.4.md  v1.5.md  v1.6.md  v1.7.md  v2.0.md  v2.1.md  v3.0.md  v3.0.pre.md
latest/: 404.html  sitemap.xml
latest/roadmap/: index.html
prerelease/: 404.html  index.html  sitemap.xml
prerelease/contributing/: index.html
prerelease/release-notes/: index.html
prerelease/roadmap/: index.html
prerelease/search/: search_index.json
v1.0.0/: index.html
v1.0.0/search/: search_index.json
v2.0.0/: 404.html  index.html  sitemap.xml
v2.0.0/contributing/: index.html
v2.0.0/search/: search_index.json
v2.1.0/: 404.html  index.html  sitemap.xml
(+201 files in other folders)
