[project]
name = "lk-docs"
description = "Sets up MkDocs and related Python tools"
requires-python = ">=3.9"
version = "0.1.0"
dependencies = []

[dependency-groups]
# These can be updated with `uv add --dev`.
dev = [
    "mkdocs<1.7,>=1.6",
    "mkdocs-material==9.6.4",
    # Versioning of documentation
    "mike<3,>=2.1.3",
    # (Py)Markdown extensions
    "mdx-truly-sane-lists<2.0,>=1.3",
    "mdx-breakless-lists<2.0.0,>=1.0.1",
    # Allows setting up redirects when renaming docs files
    "mkdocs-redirects<2.0.0,>=1.2.1",
    "mkdocs-include-markdown-plugin<8.0.0,>=7.1.4",
]

[tool.uv]
package = false